# opcua-client

./: Makefile.am  Makefile.in  README.md  configure  configure.ac  make_deb.sh
debian/: README.Debian  README.source  changelog  changelog.in  control  copyright  manpage.1.ex  opcuaclient.install
include/opc/ua/client/: binary_server.h  client.h  remote_server.h
src/: binary_computer_addon.cpp  binary_connection.cpp  binary_secure_channel.cpp  client.cpp  computer.cpp  endpoints.h  errors.cpp  errors.h  example_main.cpp  opcua_main.cpp  opcua_options.cpp  opcua_options.h  stream_computer.h  stream_node_management.h  stream_server.h  stream_subscription.h  stream_view.h
